--- a/.gitignore
+++ b/.gitignore
@@ -69,14 +69,17 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.test
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
 # Next.js build output
 .next
+out
 
 # Nuxt.js build / generate output
 .nuxt
@@ -102,3 +105,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# TypeScript
+.tsbuildinfo
